{
    "name": "CharacterControlActions",
    "maps": [
        {
            "name": "Touch",
            "id": "7111af7d-26b0-436c-8ef8-901f264eab95",
            "actions": [
                {
                    "name": "PrimaryContact",
                    "type": "PassThrough",
                    "id": "b4a1a6d5-32f2-408d-a0f9-150a3bb21467",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press",
                    "initialStateCheck": false
                },
                {
                    "name": "PrimaryPosition",
                    "type": "PassThrough",
                    "id": "2279d841-d255-46e1-aeb0-802eb87a0788",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "TapAction",
                    "type": "Button",
                    "id": "41c2736c-393c-45e2-8a62-aa635fe3035a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Tap(duration=0.3)",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "17ee27ee-eb13-4b58-932e-4b8d4db90e76",
                    "path": "<Touchscreen>/primaryTouch/press",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "PrimaryContact",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "62e97c94-50ac-4350-837b-f8045cf14905",
                    "path": "<Touchscreen>/primaryTouch/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PrimaryPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6e391d1f-df34-4868-a683-5084772c2ce4",
                    "path": "<Touchscreen>/primaryTouch/tap",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TapAction",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}